# Explainable-Hybrid-ASAG

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  run_runpod.sh  run_runpod_v2.sh
configs/: data.yaml
experiments/: audit_grouped_cv.py  llm_zeroshot_baseline.py  make_colab_zip.py  migrate_grouped_folds.py
notebooks/: 01_eda.ipynb  02_neural_colab.ipynb  02_neural_kaggle.ipynb  03_neural_hybrid_colab.ipynb
paper/: README.md  main.aux  main.blg  main.out  main.tex  main_ieee.aux  main_ieee.bbl  main_ieee.blg  main_ieee.out  main_ieee.tex  references.bib  verify_numbers.py
paper/analysis/: PHASE1-2_understanding_and_contribution.md  PHASE3_literature_review.md  PHASE4-6_technical_review_experiments_improvements.md  PHASE8-10_reviews_readiness_roadmap.md
reports/: DATASETS.md  dataset_summary.csv  phase1_report.md
reports/phase2a/: token_lengths.csv  token_lengths.json
reports/phase2b/: feature_coverage.csv  feature_dictionary.json  feature_validation.json
reports/phase2c/: feature_importance.json  results.csv  results.json
reports/phase2d/: ceiling.json  hpo.json  results.csv  results.json  significance.json
reports/phase2f/: concept_attribution.json  faithfulness.json  saf_validation.json  shap.json
reports/phase2g/: results.csv  results.json
reports/phase3/: ablations.csv  ablations.json  collapse_analysis.json  error_analysis.json  (+2 more)
tests/: test_ablations.py  test_features.py  test_loaders.py  test_models.py  test_neural.py  test_neural_compare.py  test_phase4.py  test_preprocess.py  test_training.py  test_xai.py
(+82 files in other folders)
