[project]
name = "asag"
version = "0.1.0"
description = "Hybrid explainable Automatic Short Answer Grading (ASAG) research project — Phase 1: data & environment."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [{ name = "ASAG Research" }]
license = { text = "MIT" }

dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "datasets==3.2.0",
    "scikit-learn==1.5.2",
    "spacy==3.7.6",
    "matplotlib==3.9.2",
    "seaborn==0.13.2",
    "pyarrow==17.0.0",
    "pydantic==2.9.2",
    "pyyaml==6.0.2",
    "loguru==0.7.2",
    "rich==13.9.4",
    "kaggle==1.6.17",
    "requests==2.32.3",
    "tqdm==4.66.5",
    "huggingface-hub==0.26.2",
    "click==8.4.1",
    "pip>=24.0",
    "openpyxl==3.1.5",
    # Phase 2A: tokenizer-only (no torch) for the subword token-length study.
    # protobuf is required to build the DeBERTa-v3 SentencePiece fast tokenizer.
    "transformers==4.46.3",
    "sentencepiece==0.2.0",
    "protobuf==5.28.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "jupyter==1.1.1",
    "ipykernel==6.29.5",
    "nbformat==5.10.4",
    "nbconvert==7.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --tb=short"
